# RSDatasetGenerator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  benchmark.py  config.yaml  docker-compose.yml  environment.yml  getTiles-v5.py  main.py  migrate_legacy.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  validate_architecture.py
.github/workflows/: ci.yml
examples/: basic_usage.py  getTiles-yb-v1.py
src/: __init__.py  cli.py  config.py  rs_dataset_generator.py  utils.py
src/downloaders/: __init__.py  async_downloader.py  base.py  factory.py  sync_downloader.py
src/processors/: __init__.py  data_loader.py  data_processor.py  image_processor.py  metadata_manager.py
tests/: __init__.py  test_core.py  test_downloaders.py  test_integration.py  test_processors.py
