[metadata]
name = rs-dataset-generator
version = attr: rs_dataset_generator.__version__
description = 遥感数据集生成器 - 从矢量文件生成遥感图像数据集
long_description = file: README.md
long_description_content_type = text/markdown
author = RSDatasetGenerator Team
author_email = contact@rsdatasetgenerator.com
maintainer = RSDatasetGenerator Team
maintainer_email = contact@rsdatasetgenerator.com
url = https://github.com/your-username/RSDatasetGenerator
project_urls =
    Bug Reports = https://github.com/your-username/RSDatasetGenerator/issues
    Source = https://github.com/your-username/RSDatasetGenerator
    Documentation = https://rsdatasetgenerator.readthedocs.io/
    Changelog = https://github.com/your-username/RSDatasetGenerator/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Environment :: Console
    Environment :: Web Environment
    Natural Language :: Chinese (Simplified)
    Natural Language :: English
keywords =
    remote sensing
    dataset
    generator
    geospatial
    gis
    satellite
    imagery
    tiles
    vector
    raster
    遥感
    数据集
    生成器
    地理空间
    卫星图像

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    geopandas>=0.13.0
    shapely>=2.0.0
    fiona>=1.9.0
    pyproj>=3.5.0
    Pillow>=9.5.0
    numpy>=1.24.0
    requests>=2.31.0
    aiohttp>=3.8.0
    aiofiles>=23.0.0
    pyyaml>=6.0
    toml>=0.10.2
    tqdm>=4.65.0
    rich>=13.0.0
    psutil>=5.9.0
    loguru>=0.7.0
    click>=8.0.0

[options.packages.find]
where = src

[options.package_data]
rs_dataset_generator =
    data/*.json
    data/*.yaml
    templates/*.txt
    templates/*.json
    config/*.yaml
    config/*.toml

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    pytest-mock>=3.8.0
    pytest-xdist>=3.0.0
    black>=23.0.0
    isort>=5.10.0
    flake8>=6.0.0
    mypy>=1.0.0
    pylint>=2.15.0
    bandit>=1.7.0
    pre-commit>=2.20.0
    bump2version>=1.0.0
    twine>=4.0.0
    build>=0.8.0
docs =
    Sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
    myst-parser>=0.18.0
performance =
    memory-profiler>=0.60.0
    line-profiler>=3.5.0
    py-spy>=0.3.12
ml =
    scikit-learn>=1.1.0
    tensorflow>=2.10.0; platform_machine!="arm64"
    torch>=1.12.0; platform_machine!="arm64"
cloud =
    boto3>=1.24.0
    google-cloud-storage>=2.5.0
    azure-storage-blob>=12.13.0
all =
    %(dev)s
    %(docs)s
    %(performance)s
    %(ml)s
    %(cloud)s

[options.entry_points]
console_scripts =
    rs-dataset-generator = rs_dataset_generator.cli:main
    rsdg = rs_dataset_generator.cli:main

# Flake8配置
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv,
    venv,
    docs,
    tests/fixtures
per-file-ignores =
    __init__.py:F401
    tests/*:S101,D103
    scripts/*:T201
docstring-convention = google
import-order-style = google
application-import-names = rs_dataset_generator

# Pytest配置
[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --strict-config
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    performance: marks tests as performance tests
    network: marks tests that require network access
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# Coverage配置
[coverage:run]
source = src
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */virtualenv/*
    */.venv/*
    */build/*
    */dist/*
    */setup.py
branch = true

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
ignore_errors = true
show_missing = true
skip_covered = false
skip_empty = false
sort = Cover

[coverage:html]
directory = htmlcov

# MyPy配置
[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[mypy-geopandas.*]
ignore_missing_imports = true

[mypy-shapely.*]
ignore_missing_imports = true

[mypy-fiona.*]
ignore_missing_imports = true

[mypy-rasterio.*]
ignore_missing_imports = true

[mypy-PIL.*]
ignore_missing_imports = true

[mypy-cv2.*]
ignore_missing_imports = true

[mypy-aiohttp.*]
ignore_missing_imports = true

[mypy-aiofiles.*]
ignore_missing_imports = true

[mypy-psutil.*]
ignore_missing_imports = true

[mypy-loguru.*]
ignore_missing_imports = true

# Isort配置
[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = src,tests
known_first_party = rs_dataset_generator
known_third_party =
    geopandas,
    shapely,
    fiona,
    pyproj,
    PIL,
    numpy,
    requests,
    aiohttp,
    aiofiles,
    yaml,
    toml,
    tqdm,
    rich,
    psutil,
    loguru,
    click,
    pytest

# Pylint配置
[pylint]
[pylint.messages_control]
disable =
    C0103,  # invalid-name
    C0114,  # missing-module-docstring
    C0115,  # missing-class-docstring
    C0116,  # missing-function-docstring
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    W0613,  # unused-argument

[pylint.format]
max-line-length = 88

[pylint.design]
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 60
max-parents = 10
max-attributes = 15
min-public-methods = 1
max-public-methods = 25
max-bool-expr = 5

# Bandit配置
[bandit]
exclude_dirs = tests,build,dist
skips = B101,B601

# Pydocstyle配置
[pydocstyle]
convention = google
add_ignore = D100,D104,D105,D107
match_dir = ^(?!tests|build|dist|docs).*

# Wheel配置
[bdist_wheel]
universal = 0

# Egg配置
[egg_info]
tag_build = 
tag_date = 0

# Aliases配置
[aliases]
test = pytest

# Upload配置
[upload]
repository = pypi
sign = true
identity = RSDatasetGenerator Team